<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:id="@+id/Chat_F"
    android:fitsSystemWindows="true"
    android:paddingTop="24dp"
    tools:context="com.anand.musictok.Chat.Chat_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:background="@drawable/d_bottom_gray_line">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:id="@+id/Goback"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:scaleType="fitStart"
                android:src="@drawable/ic_back"
                android:tint="@color/colorAccent"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_verification"
                android:layout_centerInParent="true"
                android:id="@+id/username"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"/>


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_for_tic_tic_verification"
                android:textSize="16dp"
                android:textColor="@color/dark_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_body"
                android:textSize="14dp"
                android:layout_gravity="center_vertical|start"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_body_below"
                android:textSize="14dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical|start"
                android:justificationMode="inter_word"
                android:textColor="@color/dark_gray"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:id="@+id/title_username"
                    android:text="Username"
                    android:textSize="14sp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/username_edit"
                    android:textSize="14dp"
                    android:hint="username"
                    android:textColorHint="@color/dark_gray"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/transparent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:id="@+id/title_fullname"
                android:text="Full name"
                android:textSize="14sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/fullname_edit"
                android:textSize="14dp"
                android:hint="full name"
                android:textColorHint="@color/dark_gray"
                android:textColor="@color/black"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:backgroundTint="@color/transparent"/>

        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_for_tic_tic_verification"
                    android:textSize="16dp"
                    android:padding="5dp"
                    android:layout_toStartOf="@+id/choose_file_btn"
                    android:id="@+id/file_name_txt"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose File"
                    android:textSize="16dp"
                    android:padding="5dp"
                    android:id="@+id/choose_file_btn"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorAccent"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_body"
                android:textSize="14dp"
                android:layout_gravity="center_vertical|start"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark_gray"/>


            <Button
                style="@style/MaterialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="@drawable/d_round_red25"
                android:gravity="center"
                android:id="@+id/send_btn"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="Send" />



        </LinearLayout>


    </ScrollView>





</RelativeLayout>